MacViews: Emit OnNativeWidgetDestroying() before clearing the NSWindowDelegate.

Currently the NSWindowDelegate is cleared beforehand, which
means observers of OnWidgetDestroying() are unable to use
GetWidgetForNativeWindow(). This is a problem during closure of
the browser window because inactive tabs are reattached when they
become active due to the active tab being closed. This results in a
DCHECK in NativeViewHostMac::AttachNativeView().

To fix, clear the NSWindowDelegate in the method
BridgedNativeWidget calls on NativeWidgetMac which deletes the
BridgedNativeWidget instance (i.e. just after emitting
OnNativeWidgetDestroying()).

R=tapted@chromium.org

BUG=604628

Review-Url: https://codereview.chromium.org/2375903002
Cr-Commit-Position: refs/heads/master@{#423676}

Former-commit-id: f7941c454c74e229cedc6b3aed96bee9b3f22e68