ui/views/widget/native_widget_mac.mm
@@ -106,6 +106,7 @@ void NativeWidgetMac::OnWindowWillClose() {
   // is still a valid pointer, then reset it.
   if (bridge_) {
     delegate_->OnNativeWidgetDestroying();
+    [GetNativeWindow() setDelegate:nil];
     bridge_.reset();
   }
   delegate_->OnNativeWidgetDestroyed();
